--- a/theme.css
+++ b/theme.css
@@ -1,6 +1,7 @@
 html,body {
     background-color: #FAF8EF;
     color: #786D65;
+    font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 .center {
@@ -14,5 +15,81 @@ canvas {
     width: 475px;
     height: 475px;
     border-radius: 10px;
+}
 
+.content {
+    display: grid;
+    grid-template-columns: auto 475px auto;
+    grid-gap: 10px;
+}
+
+a {
+    color: #786D65;
+    font-weight: bold;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 50px;
+    margin-top: 40px;
+    padding: 0;
+}
+
+h2{
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    margin: 0;
+    padding: 0;
+}
+
+hr {
+    color: #786D65;
+}
+
+.info-text {
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+
+.header {
+    display: inline-block;
+    grid-column-start: 2;
+    grid-column-end: 2
+}
+
+.game {
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+
+.score-area {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    float: right;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.score {
+    color: #ffffff;
+    background-color: #bbada0;
+    padding: 3px 15px 3px 15px;
+    border-radius: 3px;
+    margin-right: 10px;
+}
+
+.best {
+    color: #ffffff;
+    background-color: #bbada0;
+    padding: 3px 15px 3px 15px;
+    border-radius: 3px;
+}
+
+.info {
+    grid-column-start: 2;
+    grid-column-end: 2;
 }
